force-app/main/default/objects/Employees__x/Employees__x.object-meta.xml
<CustomObject>
    <description>Employees</description>
    <externalDataSource>OData_Sample</externalDataSource>
    <externalName>Employees</externalName>
    <label>Employees</label>
    <pluralLabel>Employees</pluralLabel>
</CustomObject>