force-app/main/default/objects/Employees__x/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <description>BirthDate</description>
    <externalDeveloperName>BirthDate</externalDeveloperName>
    <label>BirthDate</label>
    <type>DateTime</type>
</CustomField>