force-app/main/default/objects/Employees__x/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <description>Extension</description>
    <externalDeveloperName>Extension</externalDeveloperName>
    <label>Extension</label>
    <length>4</length>
    <type>Text</type>
</CustomField>