force-app/main/default/objects/Employees__x/fields/HireDate__c.field-meta.xml
<CustomField>
    <fullName>HireDate__c</fullName>
    <description>HireDate</description>
    <externalDeveloperName>HireDate</externalDeveloperName>
    <label>HireDate</label>
    <type>DateTime</type>
</CustomField>