force-app/main/default/objects/Employees__x/fields/HomePhone__c.field-meta.xml
<CustomField>
    <fullName>HomePhone__c</fullName>
    <description>HomePhone</description>
    <externalDeveloperName>HomePhone</externalDeveloperName>
    <label>HomePhone</label>
    <length>24</length>
    <type>Text</type>
</CustomField>