force-app/main/default/objects/Employees__x/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes</description>
    <externalDeveloperName>Notes</externalDeveloperName>
    <label>Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>