force-app/main/default/objects/Employees__x/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <description>Photo</description>
    <externalDeveloperName>Photo</externalDeveloperName>
    <label>Photo</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>