force-app/main/default/objects/Employees__x/fields/PhotoPath__c.field-meta.xml
<CustomField>
    <fullName>PhotoPath__c</fullName>
    <description>PhotoPath</description>
    <externalDeveloperName>PhotoPath</externalDeveloperName>
    <label>PhotoPath</label>
    <length>255</length>
    <type>Text</type>
</CustomField>