force-app/main/default/objects/Employees__x/fields/ReportsTo__c.field-meta.xml
<CustomField>
    <fullName>ReportsTo__c</fullName>
    <description>ReportsTo</description>
    <externalDeveloperName>ReportsTo</externalDeveloperName>
    <label>ReportsTo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>