force-app/main/default/objects/Employees__x/fields/TitleOfCourtesy__c.field-meta.xml
<CustomField>
    <fullName>TitleOfCourtesy__c</fullName>
    <description>TitleOfCourtesy</description>
    <externalDeveloperName>TitleOfCourtesy</externalDeveloperName>
    <label>TitleOfCourtesy</label>
    <length>25</length>
    <type>Text</type>
</CustomField>